--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <input type="color" id="color1">
         </div>
         <div class="input-group">
-            <label for="color2">#FFC45D</label>
+            <label for="color2">#FFC371</label>
             <input type="color" id="color2">
         </div>
         <div class="range-group">
